Change columns to medium size

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="col-md-6 col-md-offset-3">
 		<div>
 
-		<div id="info" class="col-lg-10 col-lg-offset-1">
+		<div id="info" class="col-md-10 col-md-offset-1">
 				<h2>What is a CTF?</h2>
 				<p>A CTF, or "Capture the Flag" competition, is a type of computer security contest. Strings of text, referred to as "flags," are hidden or encrypted in a series of challenges.
 					During the competition, participants try to decrypt, hack, reverse-engineer, or exploit the challenges in order to gain access to the flag.
