--- a/index.html
+++ b/index.html
@@ -13,14 +13,12 @@
 
 <body>
 	<div id="wrapper">
-		<div id="header">
+		<div id="header" class="col-md-6 col-md-offset-3">
 			<span id="flickertext" class="sevensegment">LASA</span>
 			<img src="Logotrans.png" class="inline"></img>
 				<h2>March 19 - 26, 2016 | <span id="count"></span></h2>
 				<h2>More info coming soon</h2>
 		</div>
-		<div class="col-md-6 col-md-offset-3">
-		<div>
 
 		<div id="info" class="col-md-8 col-md-offset-2">
 				<h2>What is a CTF?</h2>
@@ -35,7 +33,7 @@
 				The source code behind the website and problems will be released after the competition has ended.</p>
 
 				<h2>Who can compete?</h2>
-				<p>LASACTF will be open to any high school students within the United States. Teams can be formed of up to five students provided they are all from the same school.</p>
+				<p>LASACTF will be open to any high school students around the world, but the only students within the United States will be eligible for prizes. Teams can be formed of up to five students provided they are all from the same school.</p>
 
 				<h2>When?</h2>
 				<p>March 19 - 26, 2016. More specific information about the exact time the competition begins will be released soon.</p>
@@ -45,7 +43,7 @@
 				Competitors should register online to form a team - registration will be opened soon, and can be done at any point before or during the contest.</p>
 
 				<h2>Why?</h2>
-				<p>We enjoy programming and computer science, and CTF competitions (such as <a href="https://picoctf.com/">PicoCTF</a>, <a href="http://hsctf.com/">HSCTF</a>, and <a href="http://sctf.io/">sCTF</a>) were our first introduction to computer security.
+				<p>We enjoy programming and computer science, and CTF competitions (such as <a href="https://picoctf.com/">PicoCTF</a>, <a href="http://hsctf.com/">HSCTF</a>, <a href="http://easyctf.com/">EasyCTF</a>, and <a href="http://sctf.io/">sCTF</a>) were our first introduction to computer security.
 				We want to help other high school students by running our own.</p>
 
 				<h2>What constitutes cheating?</h2>
@@ -54,6 +52,9 @@
 					This includes both breaking into such machines and denying others access to them (for example, by altering a key or ping-flooding).
 					Sharing keys or providing overly-revealing hints to other teams is cheating, as is being directly assisted by personnel outside the team (using tools from the internet is OK; asking people on the internet to help you solve the problem is not).
 					We encourage you to solve problems in novel and creative ways using all available resources, but we do require that you solve them yourselves.</p>
+
+				<h2>Prizes?</h2>
+				<p>There will be prizes! Information about what these will be will be released soon.</p>
 
 				<h2>Who is running LASACTF?</h2>
 				<p>LASACTF is being run by students at Liberal Arts and Science Academy High School of Austin (LASA), and by extension the Steam Locomotive CTF team.
