--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 				<p>LASACTF will be open to any high school students around the world, but the only students within the United States will be eligible for prizes. Teams can be formed of up to five students provided they are all from the same school.</p>
 
 				<h2>When?</h2>
-				<p>March 19 - 26, 2016. More specific information about the exact time the competition begins will be released soon.</p>
+				<p>12 PM US Central Time on March 19, to 12 PM US Central Time on March 26, 2016.
 
 				<h2>Where?</h2>
 				<p>The competition will be completely free, and run entirely online - the only materials teams will need are a working computer with internet access and the ability to run desktop applications.
@@ -72,40 +72,28 @@
 				<p>LASACTF is being run by students at Liberal Arts and Science Academy High School of Austin (LASA), and by extension the Steam Locomotive CTF team.
 				This includes Ehsan Asdar, Neil Patil, Michael Barre, Ashwin Gupta, Arthur Pachachura, and John Walton.</p>
 
-				<p id="credit">Created by students at LASA High School, in association with the Steam Locomotive team. This page created by Neil Patil.</p>
+				<p id="credit">Created by students at LASA High School, in association with the Steam Locomotive team. This page created by <a href="https://github.com/patil215">Neil Patil</a>.</p>
 		</div>
-
 	</div>
 
 <script type="text/javascript">
-	var timespan = countdown(new Date("March 19, 2016 06:00:00"), function(ts) {
+	var timespan = countdown(new Date("March 19, 2016 12:00:00"), function(ts) {
 	document.getElementById("count").textContent = padDigits(ts.days, 2) + ":" + padDigits(ts.hours, 2) + ":" + padDigits(ts.minutes, 2) + ":" + padDigits(ts.seconds, 2);
 }, countdown.DAYS | countdown.HOURS|countdown.MINUTES|countdown.SECONDS|countdown.MILLISECONDS);
 
-function padDigits(number, digits) {
-    return Array(Math.max(digits - String(number).length + 1, 0)).join(0) + number;
-}
-
-
-setInterval(function() {
-	if(Math.random() < .1) {
-		var element = document.getElementById('flickertext');
-		element.style.opacity = "0.2";
-		setTimeout(function() {
-			element.style.opacity = "1";
-			setTimeout(function() {
-				element.style.opacity = ".2";
-				setTimeout(function() {
-					element.style.opacity = "1";
-				}, 30);
-			}, 30);
-		}, 30);
+	function padDigits(number, digits) {
+	    return Array(Math.max(digits - String(number).length + 1, 0)).join(0) + number;
 	}
-}, 500);
 
-</script>
-<script type="text/javascript">
-// Put Google Analytics here
+	setInterval(function() {
+		if(Math.random() < .05) {
+			var element = document.getElementById('flickertext');
+			element.style.opacity = "0.2";
+			setTimeout(function() {
+				element.style.opacity = "1";
+			}, 30);
+		}
+	}, 500);
 </script>
 
 </body>
