--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
 
 	  ga('create', 'UA-72196132-1', 'auto');
 	  ga('send', 'pageview');
-
 	</script>
 </head>
 
@@ -27,7 +26,7 @@
 	<div id="wrapper">
 		<div id="header" class="col-md-6 col-md-offset-3">
 			<span id="flickertext" class="sevensegment">LASA</span>
-			<img src="Logotrans.png" class="inline"></img>
+			<img src="logo.png" class="inline"></img>
 				<h2>March 19 - 26, 2016 | <span id="count"></span></h2>
 				<h2>More info coming soon</h2>
 		</div>
