--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<div id="wrapper">
 		<div id="header" class="col-md-6 col-md-offset-3">
 			<span id="flickertext" class="sevensegment">LASA</span>
-			<img src="logo.png" class="inline"></img>
+			<img src="logo-transparent.png" class="inline"></img>
 				<h2>March 19 - 26, 2016 | <span id="count"></span></h2>
 				<h2>More info coming soon</h2>
 		</div>
