Add email signup link and sponsorship contact email

--- a/index.html
+++ b/index.html
@@ -24,14 +24,20 @@
 
 <body>
 	<div id="wrapper">
+
+
+
+
 		<div id="header" class="col-md-6 col-md-offset-3">
 			<span id="flickertext" class="sevensegment">LASA</span>
 			<img src="logo-transparent.png" class="inline"></img>
 				<h2>March 19 - 26, 2016 | <span id="count"></span></h2>
-				<h2>More info coming soon</h2>
+				<h2><a href="http://eepurl.com/bMBMK1">subscribe</a> for updates</h2>
 		</div>
 
 		<div id="info" class="col-md-8 col-md-offset-2">
+				<p>For additional contest or sponsorship information, please contact us at <a href="mailto:team@lasactf.com">team@lasactf.com</a>.</p>
+
 				<h2>What is a CTF?</h2>
 				<p>A CTF, or "Capture the Flag" competition, is a type of computer security contest. Strings of text, referred to as "flags," are hidden or encrypted in a series of challenges.
 					During the competition, participants try to decrypt, hack, reverse-engineer, or exploit the challenges in order to gain access to the flag.
@@ -72,6 +78,7 @@
 				This includes Ehsan Asdar, Neil Patil, Michael Barre, Ashwin Gupta, Arthur Pachachura, and John Walton.</p>
 
 				<p id="credit">Created by students at LASA High School, in association with the Steam Locomotive team. This page created by <a href="https://github.com/patil215">Neil Patil</a>.</p>
+
 		</div>
 	</div>
 
